[package]
name = "DoubleCoreGraphics"
version = "0.1.0"
edition = "2024"

[dependencies]
pollster = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
console_error_panic_hook = "0.1.6"
console_log = "1.0"
winit = "0.29.15"
wgpu = { version = "0.19.3", features = ["webgl"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "console"
] }